# gentoo.overlay

./: README.md  ShairTunes.package_mask  castbridge.keywords  gentoo-oam.kewords  gentoo-oam.keywords  gentoo-overlay.xml  homeassistant.keywords  lmiphay.keywords  oam.keywords  opengrok.keywords  overlay.xml  squeeze-alexa.keywords
acct-group/oam/: Manifest  oam-0.ebuild
app-admin/ansible-lint/: Manifest
app-admin/ckunlock/: Manifest  ckunlock-9999.ebuild
app-admin/lnav/: Manifest
app-admin/syslog-summary/: Manifest  syslog-summary-1.14-r3.ebuild  syslog-summary-1.14-r4.ebuild
app-backup/pdumpfs/: Manifest  pdumpfs-1.3-r2.ebuild  pdumpfs-1.4.ebuild  pdumpfs-9999.ebuild
app-backup/pdumpfs-clean/: Manifest  pdumpfs-clean-9999.ebuild
app-backup/pdumpfs-rsync/: Manifest  pdumpfs-rsync-9999.ebuild
app-backup/rdumpfs/: Manifest  rdumpfs-0.1-r1.ebuild  rdumpfs-20131002-r1.ebuild
app-backup/rdumpfs-rota/: Manifest  rdumpfs-rota-1.0.ebuild  rdumpfs-rota-9999.ebuild
app-benchmarks/k6-bin/: Manifest  k6-bin-0.24.0.ebuild  k6-bin-0.35.0.ebuild
app-benchmarks/lookbusy/: Manifest  lookbusy-1.4.ebuild
app-crypt/ssl-cert-check/: Manifest  ssl-cert-check-20171114.ebuild  ssl-cert-check-20201112.ebuild
app-editors/grief/: Manifest  grief-20150315.ebuild  grief-20190309.ebuild  grief-9999.ebuild
distfiles/: kodi-14.2-generated-addons.tar.xz  kodi-15.0-generated-addons.tar.xz
kde-misc/scriptedhtml/files/: CMakeLists.txt
kde-misc/webslice-plasmoid/files/: CMakeLists.txt
licenses/: Slack  UFAS  brief-mode  tvtwm
profiles/: categories  repo_name
(+969 files in other folders)
